# openAICG2

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: _config.yml  conf.py  requirements.txt
docs/_build/.doctrees/: api_enhance_sampling.doctree  api_functionterm.doctree  api_model.doctree  api_utils.doctree  environment.pickle  installation.doctree  intro.doctree  main_amyloid42_gyration.doctree  main_sh3.doctree
docs/_build/doctrees/: api_enhance_sampling.doctree  api_functionterm.doctree  api_model.doctree  api_utils.doctree  environment.pickle  installation.doctree  intro.doctree  main_amyloid42_gyration.doctree  main_sh3.doctree
docs/_build/html/: .buildinfo  api_enhance_sampling.html  api_functionterm.html  api_model.html  api_utils.html  genindex.html  installation.html  intro.html  main_amyloid42_gyration.html  main_sh3.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/openaicg2/forcefield/: aicgmodel.html  simulationsystem.html
docs/source/: api_enhance_sampling.rst  api_functionterm.rst  api_model.rst  api_utils.rst  conf.py  index.rst  installation.rst  main_amyloid42_gyration.rst  main_sh3.rst  references.rst
example/sh3_clementigo/script/: main_sh3.ipynb  run_simulation.py
example/sh3_clementigo/script/.ipynb_checkpoints/: main_sh3-checkpoint.ipynb
openmicron/forcefield/: aicgmodel.py  simulationsystem.py
tests/: test_aicgdihd.py  test_flex_ang_dihd_potential.py  test_normal_tortion_angle.py  test_oriented_dependent_Hbond.py
(+2 files in other folders)
